--- a/examples/05_onnx2tensorrt.ipynb
+++ b/examples/05_onnx2tensorrt.ipynb
@@ -14,21 +14,22 @@
       "get start\n",
       "Loading ONNX file from path ../onnx_models/Multilingual_MiniLM_L12.onnx...\n",
       "Beginning ONNX file parsing\n",
-      "[02/25/2022-09:28:15] [TRT] [W] onnx2trt_utils.cpp:366: Your ONNX model has been generated with INT64 weights, while TensorRT does not natively support INT64. Attempting to cast down to INT32.\n",
-      "[02/25/2022-09:28:19] [TRT] [W] Output type must be INT32 for shape outputs\n",
-      "[02/25/2022-09:28:19] [TRT] [W] Output type must be INT32 for shape outputs\n",
-      "[02/25/2022-09:28:19] [TRT] [W] Output type must be INT32 for shape outputs\n",
-      "[02/25/2022-09:28:19] [TRT] [W] Output type must be INT32 for shape outputs\n",
+      "[02/26/2022-21:35:06] [TRT] [W] onnx2trt_utils.cpp:366: Your ONNX model has been generated with INT64 weights, while TensorRT does not natively support INT64. Attempting to cast down to INT32.\n",
+      "[02/26/2022-21:35:09] [TRT] [W] Output type must be INT32 for shape outputs\n",
+      "[02/26/2022-21:35:09] [TRT] [W] Output type must be INT32 for shape outputs\n",
+      "[02/26/2022-21:35:09] [TRT] [W] Output type must be INT32 for shape outputs\n",
+      "[02/26/2022-21:35:09] [TRT] [W] Output type must be INT32 for shape outputs\n",
       "raw shape of input_ids is:  (-1, -1)\n",
       "Completed parsing of ONNX file\n",
-      "Building an engine from file ../onnx_models/Multilingual_MiniLM_L12.onnx; this may take a while...\n"
+      "Building an engine from file ../onnx_models/Multilingual_MiniLM_L12.onnx; this may take a while...\n",
+      "[02/26/2022-21:35:09] [TRT] [W] Half2 support requested on hardware without native FP16 support, performance will be negatively affected.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_24934/1013447095.py:49: DeprecationWarning: Use build_serialized_network instead.\n",
+      "/tmp/ipykernel_118712/4273623961.py:47: DeprecationWarning: Use build_serialized_network instead.\n",
       "  engine = builder.build_engine(network,config)\n"
      ]
     },
@@ -36,19 +37,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[02/25/2022-09:28:20] [TRT] [W] TensorRT was linked against cuBLAS/cuBLAS LT 11.6.5 but loaded cuBLAS/cuBLAS LT 11.3.1\n",
-      "[02/25/2022-09:28:21] [TRT] [W] TensorRT was linked against cuDNN 8.2.1 but loaded cuDNN 8.1.1\n",
-      "[02/25/2022-09:28:21] [TRT] [W] Myelin graph with multiple dynamic values may have poor performance if they differ. Dynamic values are: \n",
-      "[02/25/2022-09:28:21] [TRT] [W]  (# 1 (SHAPE input_ids))\n",
-      "[02/25/2022-09:28:21] [TRT] [W]  (# 0 (SHAPE attention_mask))\n",
-      "[02/25/2022-09:30:37] [TRT] [W] Myelin graph with multiple dynamic values may have poor performance if they differ. Dynamic values are: \n",
-      "[02/25/2022-09:30:37] [TRT] [W]  (# 1 (SHAPE input_ids))\n",
-      "[02/25/2022-09:30:37] [TRT] [W]  (# 0 (SHAPE attention_mask))\n",
-      "[02/25/2022-09:33:13] [TRT] [W] Myelin graph with multiple dynamic values may have poor performance if they differ. Dynamic values are: \n",
-      "[02/25/2022-09:33:13] [TRT] [W]  (# 1 (SHAPE input_ids))\n",
-      "[02/25/2022-09:33:13] [TRT] [W]  (# 0 (SHAPE attention_mask))\n",
-      "[02/25/2022-09:33:23] [TRT] [W] TensorRT was linked against cuBLAS/cuBLAS LT 11.6.5 but loaded cuBLAS/cuBLAS LT 11.3.1\n",
-      "[02/25/2022-09:33:23] [TRT] [W] TensorRT was linked against cuDNN 8.2.1 but loaded cuDNN 8.1.1\n",
+      "[02/26/2022-21:35:10] [TRT] [W] TensorRT was linked against cuBLAS/cuBLAS LT 11.6.5 but loaded cuBLAS/cuBLAS LT 11.6.1\n",
+      "[02/26/2022-21:35:10] [TRT] [W] Myelin graph with multiple dynamic values may have poor performance if they differ. Dynamic values are: \n",
+      "[02/26/2022-21:35:10] [TRT] [W]  (# 1 (SHAPE input_ids))\n",
+      "[02/26/2022-21:35:10] [TRT] [W]  (# 0 (SHAPE attention_mask))\n",
+      "[02/26/2022-21:35:29] [TRT] [W] Myelin graph with multiple dynamic values may have poor performance if they differ. Dynamic values are: \n",
+      "[02/26/2022-21:35:29] [TRT] [W]  (# 1 (SHAPE input_ids))\n",
+      "[02/26/2022-21:35:29] [TRT] [W]  (# 0 (SHAPE attention_mask))\n",
+      "[02/26/2022-21:35:34] [TRT] [W] TensorRT was linked against cuBLAS/cuBLAS LT 11.6.5 but loaded cuBLAS/cuBLAS LT 11.6.1\n",
       "Completed creating Engine\n"
      ]
     }
@@ -120,15 +116,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[02/25/2022-09:33:24] [TRT] [I] The logger passed into createInferRuntime differs from one already provided for an existing builder, runtime, or refitter. Uses of the global logger, returned by nvinfer1::getLogger(), will return the existing value.\n",
+      "[02/26/2022-21:35:36] [TRT] [I] The logger passed into createInferRuntime differs from one already provided for an existing builder, runtime, or refitter. Uses of the global logger, returned by nvinfer1::getLogger(), will return the existing value.\n",
       "\n",
-      "[02/25/2022-09:33:24] [TRT] [I] [MemUsageChange] Init CUDA: CPU +0, GPU +0, now: CPU 1860, GPU 3108 (MiB)\n",
-      "[02/25/2022-09:33:25] [TRT] [I] Loaded engine size: 452 MiB\n",
-      "[02/25/2022-09:33:25] [TRT] [W] TensorRT was linked against cuBLAS/cuBLAS LT 11.6.5 but loaded cuBLAS/cuBLAS LT 11.3.1\n",
-      "[02/25/2022-09:33:25] [TRT] [I] [MemUsageChange] Init cuBLAS/cuBLASLt: CPU +0, GPU +8, now: CPU 2541, GPU 3342 (MiB)\n",
-      "[02/25/2022-09:33:25] [TRT] [I] [MemUsageChange] Init cuDNN: CPU +0, GPU +8, now: CPU 2541, GPU 3350 (MiB)\n",
-      "[02/25/2022-09:33:25] [TRT] [W] TensorRT was linked against cuDNN 8.2.1 but loaded cuDNN 8.1.1\n",
-      "[02/25/2022-09:33:25] [TRT] [I] [MemUsageChange] TensorRT-managed allocation in engine deserialization: CPU +0, GPU +224, now: CPU 0, GPU 480 (MiB)\n",
+      "[02/26/2022-21:35:36] [TRT] [I] [MemUsageChange] Init CUDA: CPU +0, GPU +0, now: CPU 1574, GPU 1891 (MiB)\n",
+      "[02/26/2022-21:35:37] [TRT] [I] Loaded engine size: 901 MiB\n",
+      "[02/26/2022-21:35:37] [TRT] [W] TensorRT was linked against cuBLAS/cuBLAS LT 11.6.5 but loaded cuBLAS/cuBLAS LT 11.6.1\n",
+      "[02/26/2022-21:35:37] [TRT] [I] [MemUsageChange] Init cuBLAS/cuBLASLt: CPU +0, GPU +10, now: CPU 2928, GPU 2351 (MiB)\n",
+      "[02/26/2022-21:35:37] [TRT] [I] [MemUsageChange] Init cuDNN: CPU +0, GPU +8, now: CPU 2928, GPU 2359 (MiB)\n",
+      "[02/26/2022-21:35:37] [TRT] [I] [MemUsageChange] TensorRT-managed allocation in engine deserialization: CPU +0, GPU +448, now: CPU 0, GPU 960 (MiB)\n",
       "Engine Info:\n",
       "0 type:    input\n",
       "  binding: input_ids \n",
@@ -578,7 +573,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# https://github.com/NVIDIA/TensorRT/blob/main/quickstart/SemanticSegmentation/tutorial-runtime.ipynb\n",
+    "\n",
+    "# docker run --gpus all -p127.0.0.1:2222:22 --rm -d nvcr.io/nvidia/pytorch:21.02-py3"
+   ]
   }
  ],
  "metadata": {
