--- a/examples/05_onnx2tensorrt.ipynb
+++ b/examples/05_onnx2tensorrt.ipynb
@@ -576,7 +576,7 @@
    "source": [
     "# https://github.com/NVIDIA/TensorRT/blob/main/quickstart/SemanticSegmentation/tutorial-runtime.ipynb\n",
     "\n",
-    "# docker run --gpus all -p127.0.0.1:2222:22 --rm -d nvcr.io/nvidia/pytorch:21.02-py3"
+    "# docker run --gpus all -p2222:22 -d nvcr.io/nvidia/pytorch:21.02-py3 --hostname test_docker"
    ]
   }
  ],
